--- a/Clase 6 - Aplicacion tareas/add.html
+++ b/Clase 6 - Aplicacion tareas/add.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Añadir tarea</h1>
+    <center><h1 style="background-color:rgb(27, 120, 133); color:rgb(63, 54, 54);">Añadir tarea</h1>
+</center>
     <form action="index.html">
-        <label>Fecha <input name="fecha" type="date" required></label>
+        <label> <front face="verdana" color="grey"></front>Fecha <input name="fecha" type="date" required></label>
         <br>
-        <label>Materia <input name="materia" type="text" required></label>
+        <label><front face="verdana" color="grey"></front>Materia <input name="materia" type="text" required></label>
         <br>
-        <label>Descripción 
+        <label>Descripción <front face="verdana" color="grey"></front> 
             <textarea name="descripcion"  rows="3" cols="50" required></textarea>
         </label>
         <br>
