--- a/Clase 6 - Aplicacion tareas/index.html
+++ b/Clase 6 - Aplicacion tareas/index.html
@@ -7,7 +7,46 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tareas</h1>
+    <style>
+        body{
+            margin: 30px = 10px rgb(0, 0, 0);
+            border:5px solid rgb(0, 0, 0);
+            padding:40px
+            
+        }
+        #eliminar{
+
+    padding: 15px;
+    font-weight: 625;
+    font-size: 15px;
+    color: #773333;
+    background-color: rgb(33, 35, 139);
+    border-radius: 15px;
+    border: 5px solid rgb(170, 30, 147);
+  }
+  #editar{
+
+    padding: 15px;
+    font-weight: 625;
+    font-size: 15px;
+    color: #773333;
+    background-color: rgb(39, 40, 112);
+    border-radius: 15px;
+    border: 5px solid rgb(201, 95, 183);
+  }
+  #NTarea{
+    padding: 15px;
+    font-weight: 625;
+    font-size: 15px;
+    color: #551414;
+    background-color: rgb(8, 255, 234);
+    border-radius: 15px;
+    border: 5px solid rgb(170, 30, 147);
+  }
+  
+    </style>
+    <center><h1 style="background-color:rgb(27, 120, 133); color:rgb(63, 54, 54);">Añadir tarea</h1>
+    </center><Tareas</font></h1></center>
     <table id="tablaTareas">
 
     </table>
